# OpenGL-basics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
OpenGL/res/shaders/: Basic.shader
OpenGL/src/: Application.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
assets/shaders/: Basic.shader
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/common/: Layer.h
src/ui/: UILayer.cpp  UILayer.h  WindowHandler.cpp  WindowHandler.h
